--- a/css/style.css
+++ b/css/style.css
@@ -9435,6 +9435,7 @@ a.text-dark:hover, a.text-dark:focus {
   }
   body {
     min-width: 992px !important;
+    overflow-x: hidden;
   }
   .container {
     min-width: 992px !important;
