--- a/css/style.css
+++ b/css/style.css
@@ -5863,12 +5863,12 @@ a.close.disabled {
     content: "";
     background: rgba(23, 24, 16, 0.7);
     width: 100%;
-    height: 60vh;
-    overflow: hidden;
+    height: 65vh;
+    overflow-x: hidden;
    
   }
   .w-100{
-    height: 60vh;
+    height: 65vh;
   }
 }
 
@@ -9435,7 +9435,7 @@ a.text-dark:hover, a.text-dark:focus {
   }
   body {
     min-width: 992px !important;
-    overflow-x: hidden;
+    overflow-x: hidden !important;
   }
   .container {
     min-width: 992px !important;
