--- a/css/style.css
+++ b/css/style.css
@@ -5863,12 +5863,14 @@ a.close.disabled {
     content: "";
     background: rgba(23, 24, 16, 0.7);
     width: 100%;
-    height: 65vh;
+    height: 70vh;
     overflow-x: hidden;
    
   }
   .w-100{
-    height: 65vh;
+    height: 70vh;
+    background-repeat: no-repeat;
+    background-size: cover;
   }
 }
 
