--- a/css/style.css
+++ b/css/style.css
@@ -5863,15 +5863,17 @@ a.close.disabled {
     content: "";
     background: rgba(23, 24, 16, 0.7);
     width: 100%;
-    height: 70vh;
-    overflow-x: hidden;
+    height: 50vh;
+    overflow: hidden;
    
   }
   .w-100{
-    height: 70vh;
-    background-repeat: no-repeat;
+    height: 50vh;
     background-size: cover;
   }
+  .display-1 {
+    font-size: calc(1.9rem + 4.5vw);
+}
 }
 
 .carousel-item {
