--- a/css/style.css
+++ b/css/style.css
@@ -5863,17 +5863,24 @@ a.close.disabled {
     content: "";
     background: rgba(23, 24, 16, 0.7);
     width: 100%;
-    height: 50vh;
+    height: 60vh;
     overflow: hidden;
    
   }
   .w-100{
-    height: 50vh;
+    height: 60vh;
     background-size: cover;
   }
   .display-1 {
     font-size: calc(1.9rem + 4.5vw);
 }
+.logo{
+  transform: scale(0.8);
+}
+ .carousel-item{
+  top: 50px;
+ }
+
 }
 
 .carousel-item {
